# KX-64

./: CMakeLists.txt  CMakePresets.json
include/isa/: cpu.h  encoding.h
src/: encoding.cpp
tests/: CMakeLists.txt
tools/: .clang-tidy
tools/.github/workflows/: ci.yml
